tests/rosetta/out/Smalltalk/cramers-rule.out
/tmp/cramers-rule.st:11: parse error, expected ']'
