tests/rosetta/out/Smalltalk/cramers-rule.st
" Generated by Mochi compiler v0.10.30 on 2006-01-02T15:04:05Z
"
| det n total sign c sub r row cc replaceCol res m v d x i mc s j |
det := [:m | n := (m size).
((n = 1)) ifTrue: [
m at: 0 at: 0.
] .
total := 0.
sign := 1.
c := 0.
[(c < n)] whileTrue: [.
sub := {}.
r := 1.
[(r < n)] whileTrue: [.
row := {}.
cc := 0.
[(cc < n)] whileTrue: [.
((cc ~= c)) ifTrue: [
row := row copyWith: m at: r at: cc.
] .
cc := (cc + 1).
].
.
sub := sub copyWith: row.
r := (r + 1).
].
.
total := (total + ((((sign * (m at: 0 at: c))) * (det value: sub)))).
sign := (sign * -1).
c := (c + 1).
].
.
total. ].
replaceCol := [:m :col :v | res := {}.
r := 0.
[(r < ((m size)))] whileTrue: [.
row := {}.
c := 0.
[(c < ((m at: r size)))] whileTrue: [.
((c = col)) ifTrue: [
row := row copyWith: v at: r.
] ifFalse: [
row := row copyWith: m at: r at: c.
].
c := (c + 1).
].
.
res := res copyWith: row.
r := (r + 1).
].
.
res. ].
m := {{2. -1. 5. 1}. {3. 2. 2. -6}. {1. 3. 3. -1}. {5. -2. -3. 3}}.
v := {-3. -32. -47. 49}.
d := det value: m.
x := {}.
i := 0.
[(i < 4)] whileTrue: [.
mc := replaceCol value: m value: i value: v.
x := x copyWith: ((det value: mc) / d).
i := (i + 1).
].
.
s := '['.
j := 0.
[(j < ((x size)))] whileTrue: [.
s := (s + ((x at: j asString))).
((j < ((((x size)) - 1)))) ifTrue: [
s := (s + (' ')).
] .
j := (j + 1).
].
.
s := (s + ']').
Transcript show: (s) printString; cr.
